<resources>
    <string name="app_name">Cooplas</string>
    <string name="term_condition">By using CooPlas, you agree to the\n<font color='#F46524'>Terms &amp; Conditions</font></string>
    <string name="resend_otp">Didn\'t get the code? <font color='#F46524'>Resend</font></string>
    <string name="snackbar_check_internet">Please check your internet connection!</string>
    <string name="snackbar_internet_available">Internet Connected</string>
    <string name="character">\u0040</string>
    <string name="checkout">Checkout</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax_and_fees">Tax and Fees</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="cart">Cart</string>
    <string name="deliver_at_my_place">Deliver At My Place</string>
    <string name="delivery_at_my_friend_s_place">Delivery At My Friend\'s Place</string>
    <string name="delivery_mode">Delivery Mode</string>
    <string name="coopay_credit">Coopay Credit</string>
    <string name="your_order_is_successfully_added">Your Order is Successfully Added</string>
    <string name="order_number">Your Order Number is</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="order_history">Order History</string>
    <string name="title">Title</string>
    <string name="go_online_to_start_accepting_jobs">Go online to start accepting jobs</string>
    <string name="you_are_offline">You Are Offline!</string>
    <string name="hours_online">Hours Online</string>
    <string name="total_jobs">Total Jobs</string>
    <string name="vehicle_is_waiting_for_you">Vehicle Is Waiting For You</string>
    <string name="rides_history">Rides History</string>
    <string name="notifications">Notifications</string>
    <string name="promo_codes">Promo Codes</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="cancellation_reasons">Cancellation Reasons</string>
    <string name="faq">FAQ\'s</string>
    <string name="describe">Describe</string>
    <string name="Images">Images</string>
    <string name="video">Video</string>
    <string name="resend_email">Resend Email</string>
    <string name="verify_email">Verify Email</string>
    <string name="no_internet_connection_please_check_your_internet_connection">No internet please check your internet connection</string>
    <string name="verify_now">Verify Now</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="settings">Settings</string>
    <string name="support_ticket">Support Ticket</string>
    <string name="pending">Pending</string>
    <string name="reviewing">Reviewing</string>
    <string name="resolved">Resolved</string>
    <string name="declined">Declined</string>
    <string name="support_tickets">Support Tickets</string>

    <string name="order_details">Order Details</string>
    <string name="review_restaurant">Review Restaurant</string>
    <string name="track_order">Track Order</string>
    <string name="categories">Categories</string>
    <string name="for_you">For you</string>
    <string name="delete_address_warning">Are you sure you want to delete address?</string>
    <string name="trending">Trending</string>
    <string name="car_economy">economy</string>
    <string name="car_luxury">luxury</string>
    <string name="car_family">family</string>
    <string name="select_vehicle_type">Select Vehicle Type</string>
    <string name="searching_for_vehicle">Searching for Vehicle</string>
    <string name="vehicle_is_on_the_way">Vehicle is on the Way</string>
    <string name="your_playlist">Your Playlist</string>
    <string name="close_warning">Are you sure you want to close the app?</string>
    <string name="album">Album</string>
    <string name="dummy_artist">Justin Bieber</string>
    <string name="now_playing">Now Playing</string>
    <string name="group_chat">Group Chat</string>
<!--    <string name="agora_app_id">08cd21b565a04f78b133cf68a1389d2d</string>-->
    <string name="agora_app_id">2606046c2c2a49feb835b429b5274f3a</string>

    <string-array name="tickets_status">
        <item>All</item>
        <item>Pending</item>
        <item>Reviewing</item>
        <item>Resolved</item>
        <item>Declined</item>
    </string-array>

    <string name="str_login">Login</string>
    <string name="str_account">Account</string>
    <string name="account_empty">Account can not be empty</string>
    <string name="account_too_long">Account can not exceed 64 characters</string>
    <string name="account_starts_with_space">Account can not starts with space</string>
    <string name="account_literal_null">Account can not be \"null\"</string>
    <string name="login_failed">Login failed</string>

    <string name="title_peer_msg">Peer to peer message</string>
    <string name="title_channel_message">Channel message</string>
    <string name="hint_friend">Friends name</string>
    <string name="hint_channel">Channel name</string>
    <string name="hint_enable_offline_message">Enable offline message</string>
    <string name="account_cannot_be_yourself">Account can not be yourself</string>
    <string name="channel_name_empty">Channel name can not be empty</string>
    <string name="channel_name_too_long">Channel name can not exceed 64 characters</string>
    <string name="channel_name_starts_with_space">Channel name can not start with space</string>
    <string name="channel_name_literal_null">Channel name can not be \"null\"</string>
    <string name="btn_chat">Chat</string>
    <string name="btn_join">Join</string>

    <string name="channel_title" translatable="false">%s(%d)</string>
    <string name="join_channel_failed">Join channel failed</string>
    <string name="single_input">Single line input</string>\
    <string name="str_send">Send</string>
    <string name="send_msg_failed">Failed to send message</string>
    <string name="peer_offline">Peer is offline</string>
    <string name="message_cached">Message cached by server</string>
    <string name="reconnecting">Network reconnecting ...</string>
    <string name="account_offline">Connection lost</string>
    <string name="delete_group">Are you sure you want to delete group?</string>
</resources>