<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view_login_activity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:src="@drawable/ic_smiley"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:text="@string/your_order_is_successfully_added"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/fira_sans_extra_bold">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/order_number"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/fira_sans_regular">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="56937772773"
            android:textSize="18sp"
            android:textColor="@color/colorSecond"
            android:fontFamily="@font/fira_sans_extra_bold">
        </TextView>
        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_checkout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="20dp"
            card_view:cardBackgroundColor="@color/colorSecond"
            card_view:cardCornerRadius="30dp"
            card_view:cardElevation="2dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_btn_orange"
                android:elevation="4dp"
                android:text="Track Order"
                android:fontFamily="@font/fira_sans_extra_bold"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="10dp"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="30dp"
            card_view:cardElevation="2dp">

            <Button
                android:id="@+id/btn_recharge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_border_orange_white_bg"
                android:elevation="4dp"
                android:text="@string/continue_shopping"
                android:textAllCaps="false"
                android:fontFamily="@font/fira_sans_extra_bold"
                android:textColor="@color/colorSecond" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>