<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    tools:context=".activities.Wallet.WalletActivity">

    <include
        android:id="@+id/header"
        layout="@layout/app_header_general"></include>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/card_checkout"
        android:layout_below="@+id/header"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:descendantFocusability="beforeDescendants">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fira_sans_extra_bold"
                    android:text="Delivery Mode"
                    android:textColor="@color/colorSecond"
                    android:textSize="18sp"></TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/fira_sans_extra_bold"
                        android:text="@string/deliver_at_my_place"
                        android:textColor="@color/black"
                        android:textSize="16sp"></TextView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_checked_orange">

                        </ImageView>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_right_arrow"
                            android:visibility="gone">

                        </ImageView>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/fira_sans_extra_bold"
                        android:text="@string/delivery_at_my_friend_s_place"
                        android:textColor="@color/black"
                        android:textSize="16sp"></TextView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_checked_orange"
                            android:visibility="gone">

                        </ImageView>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_right_arrow"
                            android:visibility="visible">

                        </ImageView>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fira_sans_extra_bold"
                    android:text="Payment Method"
                    android:textColor="@color/colorSecond"
                    android:textSize="18sp"
                    android:layout_marginTop="50dp"></TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/fira_sans_extra_bold"
                        android:text="Cash on Delivery"
                        android:textColor="@color/black"
                        android:textSize="16sp"></TextView>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:src="@drawable/ic_checked_orange">

                    </ImageView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/fira_sans_extra_bold"
                        android:text="@string/coopay_credit"
                        android:textColor="@color/black"
                        android:textSize="16sp"></TextView>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_checked_orange"
                        android:visibility="visible">

                    </ImageView>
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_checkout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        card_view:cardBackgroundColor="@color/colorSecond"
        card_view:cardCornerRadius="30dp"
        card_view:cardElevation="4dp">

        <Button
            android:id="@+id/btn_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_btn_orange"
            android:elevation="4dp"
            android:text="@string/checkout"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>